Minify css, update stylesheet links

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
         <link rel="preload" href="/assets/type/adhesion.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/assets/type/fanwoodtext.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/assets/type/fanwoodtext_italic.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/assets/css/style.min.css">
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <title>Page Not Found - Max Sheridan</title>
