--- a/the_castle.html
+++ b/the_castle.html
@@ -10,7 +10,7 @@
         <link rel="preload" href="/assets/type/ft88_serif.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/assets/type/fanwoodtext.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/assets/type/fanwoodtext_italic.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/assets/css/style.min.css">
         <link rel="icon" sizes="32x32" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
         <title>The Castle - Humbert Po</title>
