Update paragraph styling, lorem ipsum

--- a/the_castle.html
+++ b/the_castle.html
@@ -32,82 +32,82 @@
                         </div>
                         <div>
                             <p class="dropcap">
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+                                Non nulla pariatur duis commodo ullamco nisi aute laborum sunt. Non cillum Lorem non exercitation ad proident culpa. Fugiat cillum excepteur esse sit enim incididunt irure.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Nulla laborum labore irure sint aute qui deserunt laboris adipisicing. Veniam laborum ea veniam cupidatat eu anim adipisicing enim adipisicing consequat deserunt laboris ad do. Cupidatat anim non nulla esse sunt reprehenderit deserunt aute. Qui sunt culpa dolor. Lorem et magna cupidatat.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Ipsum ea proident incididunt magna aliqua commodo ut sit. Labore irure nostrud culpa consectetur veniam aute ea ullamco irure nisi. Nulla id mollit veniam deserunt aliqua irure nisi qui sunt.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Culpa sint nulla proident in non velit veniam culpa duis sit pariatur. Incididunt excepteur officia in culpa in et amet. Occaecat laboris exercitation in culpa tempor fugiat.. Lorem esse sit et ipsum enim. Eu incididunt sit veniam pariatur dolor nulla. Do excepteur do laboris dolor officia veniam commodo duis magna. Fugiat nulla aute reprehenderit labore magna nisi.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Duis culpa mollit nulla commodo voluptate quis nostrud tempor est eiusmod. Sint voluptate laboris reprehenderit et incididunt cillum. Adipisicing labore reprehenderit sunt nostrud cupidatat occaecat ullamco elit quis incididunt.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Enim ea cillum irure id cillum culpa ullamco consequat duis cillum amet. Irure cillum minim consequat enim nulla elit sunt sunt. Commodo laboris fugiat eiusmod minim tempor mollit. Deserunt enim incididunt consectetur voluptate fugiat consectetur voluptate reprehenderit duis enim adipisicing irure. Tempor excepteur deserunt mollit nisi fugiat consequat. Ea quis cupidatat occaecat aliquip enim elit dolor excepteur adipisicing.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Aliquip anim veniam commodo consequat exercitation cupidatat. Incididunt incididunt aliquip eu dolore aute. Cupidatat deserunt laboris veniam elit quis reprehenderit quis laboris velit sint consectetur. Commodo occaecat et irure aliqua pariatur et eu.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Elit in tempor fugiat occaecat. Est consectetur ipsum non culpa eu est pariatur voluptate fugiat. Do duis nisi duis labore non sint veniam ullamco labore. Excepteur et ea est enim do irure cupidatat id minim ea incididunt fugiat.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Ullamco anim ex est id irure. Ut in ad sit commodo dolor quis exercitation. In pariatur deserunt sint anim cillum consequat ipsum id consectetur nulla ut. Quis voluptate sint ad incididunt. Aute occaecat voluptate reprehenderit in non veniam eu magna irure ut voluptate tempor. Officia cillum tempor enim anim eiusmod qui.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                In reprehenderit tempor est fugiat ut ipsum eu labore aliquip labore dolore reprehenderit pariatur cillum. Quis consectetur nulla sit enim dolor exercitation qui aliquip exercitation ad magna sunt. Deserunt reprehenderit aute tempor deserunt. Qui velit ipsum ad pariatur eiusmod aliquip occaecat cillum. Dolor cupidatat duis cupidatat aliqua voluptate sint labore id deserunt nulla. Nulla deserunt laborum do pariatur sint ut duis occaecat occaecat ullamco duis ad qui. Fugiat nisi qui labore adipisicing eiusmod aliqua velit ullamco.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Nostrud eu laboris sint velit. Irure proident proident adipisicing elit sit anim. Ipsum eiusmod laboris adipisicing ipsum esse labore sunt magna pariatur. Et exercitation laboris qui cillum eiusmod deserunt nisi qui id reprehenderit. Labore non nisi occaecat exercitation irure quis veniam exercitation consectetur incididunt cupidatat dolore cillum. Quis eu amet dolore nostrud exercitation nulla aute sit sint ea. Consequat laborum ut eiusmod sint anim ex deserunt sunt dolor.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Laboris dolore enim exercitation sit deserunt. Ullamco nostrud adipisicing magna esse do mollit sint qui mollit ex nulla nostrud. Ea fugiat nostrud. Lorem nostrud laborum occaecat esse ad. Est consequat pariatur nulla consectetur exercitation aute ullamco nostrud eiusmod sit officia. Eu adipisicing aute nisi consequat consequat.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Irure commodo non nulla cupidatat fugiat minim aliqua et. Lorem eu est anim consequat cillum aliquip quis aute labore. Esse commodo laboris pariatur reprehenderit amet. Lorem irure aliquip veniam nisi ea nostrud irure incididunt. Id est veniam labore adipisicing est laborum ut dolor amet deserunt. Cillum laboris aliquip reprehenderit enim reprehenderit pariatur sint veniam dolore dolore non ullamco reprehenderit. Irure fugiat ad cupidatat nulla laboris commodo ea.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Commodo ad exercitation non duis. Esse ea nisi proident non quis tempor officia magna eiusmod eu nulla id. Quis occaecat sit irure et sit proident pariatur officia quis id consequat ea mollit ipsum. Officia sunt est duis proident. Ullamco aliquip labore tempor do consectetur esse consequat consectetur.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Ad sunt aliquip exercitation anim ipsum labore consectetur mollit mollit ea laboris consequat cillum ex. Qui adipisicing amet aliqua consectetur aliquip. Lorem dolor exercitation voluptate proident laborum. Cillum labore officia non ullamco ex dolore deserunt ipsum. Excepteur aute deserunt veniam. Lorem exercitation. Ad laborum voluptate consectetur ut nostrud. Eu occaecat esse commodo sit laboris. Lorem fugiat laborum labore duis est dolore commodo.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Id labore sunt mollit do. Ut laboris amet dolor commodo tempor non ea minim mollit. Non adipisicing sunt ad anim veniam incididunt excepteur adipisicing eiusmod. Qui cillum fugiat esse enim sunt reprehenderit. Consectetur anim amet dolor esse consequat non occaecat est commodo esse do.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Exercitation eu deserunt pariatur duis quis. Nostrud pariatur reprehenderit pariatur sint reprehenderit culpa incididunt eiusmod non tempor cillum aliqua anim. Aliqua qui ut duis non fugiat enim exercitation tempor sint irure. Aute. Lorem commodo magna culpa. Cupidatat ut officia ullamco laboris culpa amet. Laborum reprehenderit nulla nisi exercitation eiusmod proident enim ullamco mollit. Nostrud tempor officia ut quis proident sint eiusmod tempor quis cillum consectetur ut.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Et sunt elit amet elit labore magna exercitation. Anim exercitation commodo ullamco id voluptate duis laborum aliqua. Laboris anim minim excepteur do.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Est esse veniam veniam tempor ea duis minim enim labore. Lorem et adipisicing tempor qui. Aute aliqua reprehenderit tempor ea aliqua reprehenderit officia magna ullamco mollit anim. Excepteur commodo eu cupidatat est ea aliquip laboris pariatur mollit laboris. Laboris aute sunt mollit labore deserunt sunt voluptate non officia aliqua.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Deserunt duis qui sint ea dolor nostrud ad. Amet mollit dolor adipisicing dolor laborum cupidatat occaecat mollit. Eu exercitation excepteur pariatur aute. Lorem dolore proident laborum voluptate cupidatat esse. Officia consequat cupidatat id quis ex sint cupidatat aliqua aliquip aliquip veniam.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Eu reprehenderit dolor voluptate nisi commodo mollit est officia cillum voluptate incididunt. Sunt fugiat tempor deserunt esse do enim eiusmod eiusmod irure. Velit occaecat qui culpa ex eiusmod aliqua. Dolor amet consectetur deserunt sit.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Aliqua nostrud consectetur ut labore. Quis veniam est ullamco veniam. Do do culpa pariatur esse culpa ut eu nisi nisi. Duis non dolor pariatur exercitation aliquip elit laboris ullamco eu ea quis. Enim labore do elit sunt fugiat. Lorem reprehenderit quis consequat nostrud nisi consequat laborum esse. Magna occaecat pariatur esse laboris.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Ea dolor sint esse labore qui occaecat in. Adipisicing aliqua enim non consectetur duis sunt. Cillum proident irure non esse dolore. Magna ipsum irure cupidatat id velit minim ex magna. Lorem ullamco culpa. Labore mollit cupidatat adipisicing ut reprehenderit velit proident nostrud commodo do eu nisi.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Incididunt do reprehenderit pariatur ipsum culpa exercitation magna dolore nostrud. Labore sint aliquip ullamco consequat est. Duis amet tempor sit dolore deserunt culpa eu eu excepteur aute amet. Ullamco deserunt adipisicing commodo quis anim.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Amet sint fugiat esse do ullamco deserunt adipisicing officia consectetur dolor quis. Duis esse magna. Lorem ipsum enim adipisicing. Pariatur amet cupidatat laboris commodo. Lorem ea et fugiat. Ut voluptate. Lorem culpa consectetur proident officia id proident laborum nostrud laboris velit ex.
                             </p>
                             <p>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                                Reprehenderit aliquip ipsum proident ex labore qui irure ut voluptate dolore. Qui qui occaecat dolore sint velit aute sunt ea cillum ipsum aliqua. Nisi ullamco voluptate excepteur incididunt laborum occaecat sit. Id enim culpa deserunt. Lorem aliquip irure do esse laborum mollit culpa pariatur. Magna proident qui sunt enim proident nostrud nisi sunt voluptate fugiat do laborum.
                             </p>
                             <hr>
                             <p class="small">
